--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agre
 </head>
 <body>
 
-<h1>My Website</h1>
-<p>A website created by me.</p>
+<h1>Shreya</h1>
+<p>My Website.</p>
 
 </body>
 </html>
