--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <title>Shreya</title>
 <meta charset="UTF-8">
+<link rel="manifest" crossorigin="use-credentials" href="manifest.json"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="manifest" href="../manifest.json">	
+
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
