--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ clevertap.privacy.push({useIP: true}); //set the flag to true, if the user agree
 		 var wzrk = document.createElement('script');
 		 wzrk.type = 'text/javascript';
 		 wzrk.async = true;
-		 wzrk.src = 'https:' == 'https://shreyagaikwad.github.io/Shreya/a.js';
+		 wzrk.src ='https://shreyagaikwad.github.io/Shreya/a.js';
 		 var s = document.getElementsByTagName('script')[0];
 		 s.parentNode.insertBefore(wzrk, s);
   })();
