--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ clevertap.privacy.push({useIP: true}); //set the flag to true, if the user agree
 		background-color:#00FF00,
 		border-style: solid;}
 	  </style>
-<link rel="manifest" href="/manifest.json"/>
+<link rel="manifest" href="https://shreyagaikwad.github.io/manifest.json"/>
 
 </head>
 <body>
