--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ clevertap.privacy.push({useIP: true}); //set the flag to true, if the user agree
 		background-color:#00FF00,
 		border-style: solid;}
 	  </style>
-<link rel="manifest" href="https://shreyagaikwad.github.io/manifest.json"/>
+<link rel="manifest" href="/manifest.json"/>
 
 </head>
 <body>
@@ -49,7 +49,7 @@ clevertap.privacy.push({useIP: true}); //set the flag to true, if the user agree
         clevertap.event.push("<can add system events or custom events here>")
     }
 </script>
-<scripts src="clevertap_sw.js"></scripts>	
+	
 
 <h1>Shreya</h1>
 <p>My Website.</p>
