--- a/index.html
+++ b/index.html
@@ -38,6 +38,53 @@ clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agre
 	
 
 <h1>Shreya</h1>
+	
+	<button
+                                          style="
+                                            background-color: #400088;
+                                            border-radius: 4px;
+                                            border: 0 solid transparent;
+                                            color: #fff;
+                                            font-family: Arial, Helvetica Neue,
+                                              Helvetica, sans-serif;
+                                            text-align: center;
+                                            font-weight: 400;
+                                            padding-left: 20px;
+                                            padding-right: 20px;
+                                            padding-top: 5px;
+                                            padding-bottom: 5px;
+                                          "
+                                        >
+                                          <span
+                                            dir="ltr"
+                                            style="
+                                              word-break: break-word;
+                                              line-height: 28px;
+                                            "
+                                          >
+                                            <a
+                                              data-track="off"
+                                              href="donotoverrride"
+                                            >
+                                              <a
+                                                data-track="off"
+                                                href="https://umore.onelink.me/X1j6/InviteFriends"
+                                                target="_blank"
+                                                style="
+                                                  color: #fff;
+                                                  font-family: Arial,
+                                                    Helvetica Neue, Helvetica,
+                                                    sans-serif;
+                                                  text-align: center;
+                                                  font-weight: 400;
+                                                  text-decoration: none;
+                                                "
+                                              >
+                                                <strong>Add buddy!</strong></a
+                                              >
+                                            </a>
+                                          </span>
+                                        </button>
 <p>My Website. 2</p>
 
 </body>
